--- a/templates/student/flames/view_registration.html
+++ b/templates/student/flames/view_registration.html
@@ -302,7 +302,7 @@ active
                             
                             // Initialize Razorpay checkout
                             const options = {
-                                key: 'rzp_test_3SQlSCQ0alBcCn',
+                                key: '{{ razorpay_key_id }}',
                                 amount: data.amount,
                                 currency: data.currency,
                                 name: data.name || 'Angaar FLAMES',
